--- a/_layouts/photo_gallery.html
+++ b/_layouts/photo_gallery.html
@@ -6,6 +6,8 @@ layout: default
 <!-- source lightbox: https://github.com/ashleydw/lightbox -->
 <article>
 
+    <a href="{{ "/" | relative_url }}" class="back_link"><i class="fas fa-long-arrow-alt-left"></i></a>
+
     <header>
         <h1>{{ page.title }}</a></h1>
     </header>
