--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -22,6 +22,12 @@ img {
     }
 }
 
+.back_link {
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 2em;
+    float: left;
+}
+
 // Variables ===================================================================
 
 $web-font-path: "https://fonts.googleapis.com/css?family=Nunito+Sans:400,600" !default;
